[package]
name = "harmolyn"
version = "0.1.0"

[lib]
name = "harmolyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
description = "Harmolyn — secure chat client for the xorein network"
authors = []
license = "AGPL-3.0"
repository = "https://github.com/kylhuk/harmolyn"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
